new file:   assets/images/cenario_home.jpeg 	deleted:    assets/images/space.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app">
         <div class="app-inner">
-            <img src="./assets/images/space.jpg" alt="Espaço">
+            <img src="./assets/images/cenario_home.jpeg" alt="Espaço">
         </div>
     </div>
 
