deleted:    assets/images/cenario_home.jpeg 	new file:   assets/images/mapa_geral.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="app">
         <div class="app-inner">
-            <img src="./assets/images/cenario_home.jpeg" alt="Espaço">
+            <!-- <img src="./assets/images/mapa_geral.png" alt="Mapa geral"> -->
+            <img src="./assets/images/mapa_geral.png" alt="Espaço" style="width: 4600px; height: 4160px">
+            <!-- <img src="./assets/images/mapa_geral.png" alt="Espaço" style="transform: scale(0.7);"> -->
         </div>
     </div>
 
