modified:   css/main.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,95 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Hinpho</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"/>
+    <!-- Font Awesome --> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'/>
     
 </head>
 <body>
     <div class="app">
         <div class="app-inner">
-            <!-- <img src="./assets/images/mapa_geral.png" alt="Mapa geral"> -->
             <img src="./assets/images/mapa_geral.png" alt="Espaço" style="width: 4600px; height: 4160px">
-            <!-- <img src="./assets/images/mapa_geral.png" alt="Espaço" style="transform: scale(0.7);"> -->
+        </div>
+    </div>
+    <div>
+        <div>
+
+          <!-- Left Navigation -->
+          <div class="navigation" style="top: 20%;bottom: 20%">
+            <ul>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-hippo"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-otter"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-dog"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-cat"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-fish"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-dragon"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="icon"><i class="fa-solid fa-spider"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#" targer="_blank">
+                  <span class="icon"><i class="fa-solid fa-cow"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#" targer="_blank">
+                  <span class="icon"><i class="fa-solid fa-horse"></i></span>
+                </a>
+              </li>
+              <li>
+                <a href="#" targer="_blank">
+                  <span class="icon"><i class="fa-solid fa-dove"></i></span>
+                </a>
+              </li>
+            </ul>
+            <div class="arrow-up">
+              <span class="icon"><i class="fa-solid fa-chevron-up"></i></span>
+            </div>
+            <div class="toggle">
+              <span class="icon"><i class="fa-solid fa-chevron-down"></i></span>
+            </div>
+          </div>
+
+          <!-- Progress Bar -->
+          <div style="position: fixed; top: 92%;width: 60%; left: 20%;right: 20%;">
+            <div class="progress" style="height: 20px;">
+              <div class="progress-bar bg-dark progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Barra de progresso" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
+            </div>
+          </div>
         </div>
     </div>
 
+
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./js/scrollbooster.min.js"></script>
     <script type="text/javascript" src='./js/main.js'></script>
 </body>
