modified:   animalPage/css/style.css 	new file:   animalPage/img/card animal.svg 	new file:   animalPage/img/card-animal.png 	modified:   animalPage/replica.html 	modified:   assets/bootstrap/css/bootstrap.css

--- a/animalPage/replica.html
+++ b/animalPage/replica.html
@@ -14,24 +14,13 @@
 </head>
 
 <body>
-  <!--Menu de voltar-->
-  <nav class="navbar navbar-expand chineseRed">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" style="color: white;"><i class="bi bi-arrow-left"></i> Voltar para o infográfico</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
   <!--Conteúdo-->
+  <a aria-current="page" href="#"><i class="bi fs-1 bi-chevron-left icon"></i></a>
   <div class="container">
     </br>
 
     <!--Slides-->
-    <div class="row">
+    <div class="row marginTopn125">
       <div class="col">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -66,8 +55,8 @@
     <!--Titulo-->
     <div class="row text-center pb-3">
       <div class="col p-3">
-        <h1 class="titulo">Tigre de Bengala</h1>
-        <h6 class="mini-text">da família Panthera tigris tigris</h6>
+        <h1 class="titulo ">Peixe-boi-marinho</h1>
+        <h6 class="mini-text borda">da família Trichechus manatus</h6>
       </div>
     </div>
 
@@ -79,99 +68,138 @@
         </figure>
       </div>
       <div class="col-lg-6 col-sm-8">
-        <div class="card">
-          <div class="card-header">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <div class="infos">
+          <div class="row header">
+            <h5 class="text-header borda">Características</h5>
+            <div class="col">
+              <h6 class="subtitle"><i class="bi fs-2 bi-house-heart"></i> Litoral do Ceará </h6>
+            </div>
+            <div class="col">
+              <h6 class="subtitle"><i class="bi fs-2 bi-tsunami"></i> Oceano Atlântico </h6>
+            </div>
           </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+          <div class="body row">
+            <div class="col-12">
+              <p class="text">A ordem Sirenia é a única representada por mamíferos aquáticos preferencialmente herbívoros. Possui quatro espécies viventes, todas ameaçadas de extinção. O peixe-boi marinho apresenta o corpo acinzentado à marrom de formato fusiforme, com dorso ventralmente achatado. A espécie pode medir até 4,5 m e pesar mais de 600 kg quando adulto. Os filhotes nascem com aproximadamente 32 kg e 1,24 metros e com o corpo recoberto por pelos esparsos, que têm função sensorial
+              </p>
+            </div>
+            <div class="row">
+              <div class="col-4 text-center">
+                <i class="bi fs-1 bi-speedometer"></i>
+                <p class="text-center">600kg</p>
+              </div>
+              <div class="col-4 text-center">
+                <i class="bi fs-1 bi-sort-up"></i>
+                <p class="text-center">4,5M</p>
+              </div>
+              <div class="col-4 text-center">
+                <i class="bi fs-1 bi-clipboard-heart"></i>
+                <p class="text-center">60 anos</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <!--Conteúdo 2-->
+      <div class="col-lg-6 col-sm-8">
+        <div class="infos">
+          <div class="row header">
+            <h5 class="text-header borda">Ameaças</h5>
+          </div>
+          <div class="body row">
+            <div class="col-12">
+              <p class="text">Atualmente, ações antropogênicas diretas e indiretas são as maiores ameaças. As populações nativas vêm sofrendo grande perda de habitat devido à ocupação desordenada do litoral. O uso inadequado das áreas marinhas e estuarinas acarreta no declínio de qualidade do habitat da espécie, mesmo em locais menos populosos. Com base nas ameaças acima, suspeita-se que possa ocorrer um declínio populacional de pelo menos 50% ao longo de três gerações, cerca de 60 anos, ou um declínio de 20% em duas gerações, caso medidas mitigadoras não sejam implementadas. Portanto, a espécie foi categorizada como Em Perigo (EN).
+              </p>
+            </div>
+            <div class="row">
+              <!--circle 1-->
+              <div class="col-lg-4 col-sm-4">
+                <div class="flex-wrapper">
+                  <div class="single-chart">
+                    <svg viewBox="0 0 36 36" class="circular-chart green">
+                      <path class="circle-bg"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <path class="circle"
+                        stroke-dasharray="60, 100"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <text x="18" y="20.35" class="percentage">60%</text>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!--cricle 2-->
+              <div class="col-lg-4 col-sm-4">
+                <div class="flex-wrapper">
+                  <div class="single-chart">
+                    <svg viewBox="0 0 36 36" class="circular-chart green">
+                      <path class="circle-bg"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <path class="circle"
+                        stroke-dasharray="60, 100"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <text x="18" y="20.35" class="percentage">Em Perigo</text>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+
+              <!--Circle 3-->
+              <div class="col-lg-4 col-sm-4">
+                <div class="flex-wrapper">
+                  <div class="single-chart">
+                    <svg viewBox="0 0 36 36" class="circular-chart green">
+                      <path class="circle-bg"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <path class="circle"
+                        stroke-dasharray="60, 100"
+                        d="M18 2.0845
+                          a 15.9155 15.9155 0 0 1 0 31.831
+                          a 15.9155 15.9155 0 0 1 0 -31.831"
+                      />
+                      <text x="18" y="20.35" class="percentage">60%</text>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-lg-4 col-sm">
         <figure class="figure">
           <img src="img/tigre01.png" class="figure-img img-fluid rounded" alt="...">
         </figure>
       </div>
-      <div class="col-lg-6 col-sm-8">
-        <div class="card">
-          <div class="card-header">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-          <div class="card-body">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-10 col-sm-4">
-                  <div class="flex-wrapper">
-                    <div class="single-chart">
-                      <svg viewBox="0 0 36 36" class="circular-chart green">
-                        <path class="circle-bg"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <path class="circle"
-                          stroke-dasharray="60, 100"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <text x="18" y="20.35" class="percentage">60%</text>
-                      </svg>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-10 col-sm-4">
-                  <div class="flex-wrapper">
-                    <div class="single-chart">
-                      <svg viewBox="0 0 36 36" class="circular-chart green">
-                        <path class="circle-bg"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <path class="circle"
-                          stroke-dasharray="60, 100"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <text x="18" y="20.35" class="percentage">60%</text>
-                      </svg>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-10 col-sm-4">
-                  <div class="flex-wrapper">
-                    <div class="single-chart">
-                      <svg viewBox="0 0 36 36" class="circular-chart green">
-                        <path class="circle-bg"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <path class="circle"
-                          stroke-dasharray="60, 100"
-                          d="M18 2.0845
-                            a 15.9155 15.9155 0 0 1 0 31.831
-                            a 15.9155 15.9155 0 0 1 0 -31.831"
-                        />
-                        <text x="18" y="20.35" class="percentage">60%</text>
-                      </svg>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    </div>
+    <div class="row justify-content-center gy-3 my-4">
+      <div class="col">
+        <h1 class="text-center text-more borda">Curiosidades</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p class="text">Peixes-bois marinhos são animais essencialmente solitários. A espécie é promíscua e forma grupos de reprodução compostos por uma fêmea no cio e vários machos adultos, criando um cortejo reprodutivo que pode durar de uma semana até um mês. Durante esse período, a fêmea acasala com vários machos. A reprodução ocorre entre setembro e abril.
+          </p>
+          <p class="text text-center">Veja abaixo um vídeo falando mais ainda sobre o Peixe-boi-marinho.</p>
+        </div>
+        <div class=" col-12 ratio ratio-16x9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/3jZtEUc-30o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -179,11 +207,9 @@
 </div>
 
   <!--Footer-->
-  <footer class="d-flex flex-wrap align-items-center py-3 my-4 border-top">
-    <div class="container">
-      <p class="text-center" style="color: white;">&copy; 2022 Glamunia - Soluções Infográficas</p>
-    </div>
-  </footer>
+  <div class="flex-wrap align-items-center py-3 my-4 border-footer">
+    <p class="text-center text-footer">&copy; 2022 Glamunia - Soluções Infográficas</p>
+  </div>
 </body>
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </html>
