--- a/animalPage/animal1.html
+++ b/animalPage/animal1.html
@@ -30,13 +30,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/tigre-03.png" class="img-fluid w-100" alt="...">
+              <img src="img/peixeboi2.jpg" class="imagem" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/tigre-03.png" class="img-fluid w-100" alt="...">
+              <img src="img/tigre-03.png" class="imagem" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/tigre-03.png" class="img-fluid w-100" alt="...">
+              <img src="img/tigre-03.png" class="imagem" width="1240px" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -64,7 +64,7 @@
     <div class="row justify-content-center gy-3">
       <div class="col-lg-4 col-sm">
         <figure class="figure">
-          <img src="img/tigre01.png" class="figure-img img-fluid rounded" alt="...">
+          <img src="img/peixe-boi-1.jpg" class="figure-img img-fluid rounded" alt="...">
         </figure>
       </div>
       <div class="col-lg-6 col-sm-8">
@@ -184,7 +184,7 @@
       </div>
       <div class="col-lg-4 col-sm">
         <figure class="figure">
-          <img src="img/tigre01.png" class="figure-img img-fluid rounded" alt="...">
+          <img src="img/peixeboi3.jpg" class="figure-img img-fluid rounded" alt="...">
         </figure>
       </div>
     </div>
@@ -203,6 +203,13 @@
         </div>
       </div>
     </div>
+
+    <!--Overlay trigger-->
+    <div class="row justify-content- gy-3 my-4">
+      <div class="col">
+        <button type="button" class="btn btn-success centered" onclick="on()">Overlay</button>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -210,6 +217,27 @@
   <div class="flex-wrap align-items-center py-3 my-4 border-footer">
     <p class="text-center text-footer">&copy; 2022 Glamunia - Soluções Infográficas</p>
   </div>
+
+
+  <!--Overlay content-->
+  <div class="overlay" id="overlay">
+    <div class="container">
+      <div class="row justify-content-center gy-3 my-4">
+        <div class="col">
+          <h1 class="text-center text-more borda">Curiosidades</h1>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p class="text">Peixes-bois marinhos são animais essencialmente solitários. A espécie é promíscua e forma grupos de reprodução compostos por uma fêmea no cio e vários machos adultos, criando um cortejo reprodutivo que pode durar de uma semana até um mês. Durante esse período, a fêmea acasala com vários machos. A reprodução ocorre entre setembro e abril.
+            </p>
+            <p class="text text-center">Veja abaixo um vídeo falando mais ainda sobre o Peixe-boi-marinho.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
+<script src="js/app.js"></script>
 </html>
