modified:   animalPage/animal1.html 	modified:   animalPage/css/style.css 	new file:   animalPage/img/fundo2.png 	modified:   animalPage/img/peixeboi2.jpg 	modified:   animalPage/img/peixeboi3.jpg 	new file:   animalPage/img/peixeboi4.jpg 	new file:   animalPage/img/peixeboi5.JPG 	deleted:    animalPage/img/tigre-03.png 	deleted:    animalPage/img/tigre01.png 	deleted:    animalPage/img/tigre02.png

--- a/animalPage/animal1.html
+++ b/animalPage/animal1.html
@@ -30,13 +30,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/peixeboi2.jpg" class="imagem" alt="...">
+              <img src="img/peixeboi2.jpg" class="img-fluid w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/tigre-03.png" class="imagem" alt="...">
+              <img src="img/peixeboi4.jpg" class="img-fluid w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="img/tigre-03.png" class="imagem" width="1240px" alt="...">
+              <img src="img/peixeboi5.JPG" class="img-fluid w-100" width="1240px" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -112,30 +112,9 @@
               <p class="text">Atualmente, ações antropogênicas diretas e indiretas são as maiores ameaças. As populações nativas vêm sofrendo grande perda de habitat devido à ocupação desordenada do litoral. O uso inadequado das áreas marinhas e estuarinas acarreta no declínio de qualidade do habitat da espécie, mesmo em locais menos populosos. Com base nas ameaças acima, suspeita-se que possa ocorrer um declínio populacional de pelo menos 50% ao longo de três gerações, cerca de 60 anos, ou um declínio de 20% em duas gerações, caso medidas mitigadoras não sejam implementadas. Portanto, a espécie foi categorizada como Em Perigo (EN).
               </p>
             </div>
-            <div class="row">
-              <!--circle 1-->
-              <div class="col-lg-4 col-sm-4">
-                <div class="flex-wrapper">
-                  <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart green">
-                      <path class="circle-bg"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <path class="circle"
-                        stroke-dasharray="60, 100"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">60%</text>
-                    </svg>
-                  </div>
-                </div>
-              </div>
+            <div class="row justify-content-center">
               <!--cricle 2-->
-              <div class="col-lg-4 col-sm-4">
+              <div class="col-lg-4 col-sm">
                 <div class="flex-wrapper">
                   <div class="single-chart">
                     <svg viewBox="0 0 36 36" class="circular-chart green">
@@ -145,7 +124,7 @@
                           a 15.9155 15.9155 0 0 1 0 -31.831"
                       />
                       <path class="circle"
-                        stroke-dasharray="60, 100"
+                        stroke-dasharray="65, 100"
                         d="M18 2.0845
                           a 15.9155 15.9155 0 0 1 0 31.831
                           a 15.9155 15.9155 0 0 1 0 -31.831"
@@ -155,29 +134,14 @@
                   </div>
                 </div>
               </div>
-
-              <!--Circle 3-->
-              <div class="col-lg-4 col-sm-4">
-                <div class="flex-wrapper">
-                  <div class="single-chart">
-                    <svg viewBox="0 0 36 36" class="circular-chart green">
-                      <path class="circle-bg"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <path class="circle"
-                        stroke-dasharray="60, 100"
-                        d="M18 2.0845
-                          a 15.9155 15.9155 0 0 1 0 31.831
-                          a 15.9155 15.9155 0 0 1 0 -31.831"
-                      />
-                      <text x="18" y="20.35" class="percentage">60%</text>
-                    </svg>
-                  </div>
-                </div>
+              <div class="col-lg-8">
+                <p class="text">Um estudo preliminar estimou por censo aéreo 423 indivíduos na costa do nordeste. Em função do método utilizado nesse levantamento ter limitações, para esta avaliação foi utilizada a estimativa de que a população brasileira tem 500 indivíduos</p>
               </div>
-
+            </div>
+            <div class="row justify-content-center">
+              <div class="col">
+                <p class="text">A variabilidade genética na população de peixes-bois marinhos no Brasil é baixa, e a população se encontra fragmentada. Estudos genéticos estão sendo realizados atualmente para identificar o grau de isolamento dos indivíduos no Brasil e as subpopulações existentes.</p>
+              </div>
             </div>
           </div>
         </div>
